Bug 812343 - Empty Downloads Panel on Windows needs downloads richlistbox collapsed. r=mak.
UltraBlame original commit: c2ea3fb28c45054902ca7d386cfcdcdf3f42cb8b

--- a/browser/themes/winstripe/downloads/downloads.css
+++ b/browser/themes/winstripe/downloads/downloads.css
@@ -105,6 +105,24 @@ inherit
 ;
 }
 #
+downloadsPanel
+:
+not
+(
+[
+hasdownloads
+]
+)
+>
+#
+downloadsListBox
+{
+display
+:
+none
+;
+}
+#
 downloadsHistory
 {
 background
